--- a/RF_Go/Components/MainTab.razor
+++ b/RF_Go/Components/MainTab.razor
@@ -33,10 +33,8 @@
             </MudButton>
         </div>
     </div>
-
-
     
-    <MudTable class="" Hover="true" Dense="true" Bordered="false" Striped="false" HorizontalScrollbar="true" @bind-Items="DevicesViewModel.Devices" @ref="mudTable"
+    <MudTable Height="70vh" Hover="true" Dense="true" Bordered="false" Striped="false" HorizontalScrollbar="true" @bind-Items="DevicesViewModel.Devices" @ref="mudTable"
               RowClass="cursor-pointer" RowClassFunc="@SelectedRowClassFunc">
         <ToolBarContent>
             <MudSpacer />
