--- a/RF_Go/Pages/Index.razor
+++ b/RF_Go/Pages/Index.razor
@@ -17,76 +17,61 @@
 @inject GroupsViewModel GroupsViewModel
 @inject ExclusionChannelViewModel ExclusionChannelViewModel
 
-
-<MudTabs KeepPanelsAlive="true" Elevation="4" Centered="true" Rounded="false" AlwaysShowScrollButtons="true" Class="flex justify-content-around">
-    <MudTabPanel Text="Devices" ID='"devices_tab"'>
-        <MudGrid Spacing="0" Class="w-100 display-6 px-2">
-            <MudItem xs="12" md="2" Class="px-2">
-                <MudPaper Class="mt-4">
-                    <DeviceSelection DeviceData="deviceData" DevicesViewModel="DevicesViewModel" GroupsViewModel="GroupsViewModel" OnDeviceSaved="RefreshComponents" />
-                </MudPaper>
-                <MudPaper Class="mt-4">
-                     <TVChannelsFilter ExclusionChannelViewModel="ExclusionChannelViewModel" /> 
-                </MudPaper>
-            </MudItem>
-            <MudItem xs="12" md="8" Class="px-2">
-                <MudPaper Class="mt-4">
-                    <MainTab DeviceData="deviceData" ExclusionChannelViewModel="ExclusionChannelViewModel" DevicesViewModel="DevicesViewModel" GroupsViewModel="GroupsViewModel" OnDeviceSaved="RefreshComponents" />
-                </MudPaper>
-            </MudItem>
-            <MudItem xs="12" md="2" Class="px-2">
-                <MudPaper Class="mt-4">
-                    <SlidersSpacers DeviceData="deviceData" DevicesViewModel="DevicesViewModel" GroupsViewModel="GroupsViewModel" />
-                </MudPaper>
-            </MudItem>
-        </MudGrid>
-        <RFGroupsLayout DeviceData="deviceData" DevicesViewModel="DevicesViewModel" GroupsViewModel="GroupsViewModel" />
-    </MudTabPanel>
-    <MudTabPanel Text="TVChannels" ID='"tvchannels_tab"' />
-    <MudTabPanel Text="Remote" ID='"remote_tab"'>
-        <MudText>
-            <RemoteTab DeviceData="deviceData" DevicesViewModel="DevicesViewModel" GroupsViewModel="GroupsViewModel" />
-        </MudText>
-    </MudTabPanel>
-</MudTabs>
-
 @if (isLoadingJSON)
 {
     <MudProgressCircular Indeterminate="true" Color="Color.Primary" />
 }
 else
 {
-    <MudTabs KeepPanelsAlive="true" Elevation="4" Centered="true" Rounded="false" AlwaysShowScrollButtons="true" Class="flex justify-content-around">
-        <MudTabPanel Text="Devices" ID='"devices_tab"'>
-            <MudGrid Spacing="1" Class="w-100 display-6 pl-6 pr-6">
-                <MudItem xs="12" md="3">
-                    <MudPaper Class="mt-4">
-                        <DeviceSelection DeviceData="deviceData" DevicesViewModel="DevicesViewModel" GroupsViewModel="GroupsViewModel" OnDeviceSaved="RefreshComponents" />
-                    </MudPaper>
-                    <MudPaper Class="mt-4">
-                         <TVChannelsFilter ExclusionChannelViewModel="ExclusionChannelViewModel" /> 
-                    </MudPaper>
-                </MudItem>
-                <MudItem xs="12" md="6">
-                    <MudPaper Class="mt-4">
-                        <MainTab DeviceData="deviceData" ExclusionChannelViewModel="ExclusionChannelViewModel" DevicesViewModel="DevicesViewModel" GroupsViewModel="GroupsViewModel" OnDeviceSaved="RefreshComponents" />
-                    </MudPaper>
-                </MudItem>
-                <MudItem xs="12" md="3">
-                    <MudPaper Class="mt-4">
-                        <SlidersSpacers DeviceData="deviceData" DevicesViewModel="DevicesViewModel" GroupsViewModel="GroupsViewModel" />
-                    </MudPaper>
-                </MudItem>
-            </MudGrid>
-            <RFGroupsLayout DeviceData="deviceData" DevicesViewModel="DevicesViewModel" GroupsViewModel="GroupsViewModel" />
-        </MudTabPanel>
-        <MudTabPanel Text="TVChannels" ID='"tvchannels_tab"' />
-        <MudTabPanel Text="Remote" ID='"remote_tab"'>
-            <MudText>
-                <RemoteTab DeviceData="deviceData" DevicesViewModel="DevicesViewModel" GroupsViewModel="GroupsViewModel" />
-            </MudText>
-        </MudTabPanel>
-    </MudTabs>
+        <MudTabs
+                 KeepPanelsAlive="true"
+                 Elevation="4"
+                 Centered="true"
+                 Rounded="false"
+                 AlwaysShowScrollButtons="true">
+            <MudTabPanel Text="Devices" ID='"devices_tab"' Class="flex-grow-1 d-flex flex-column">
+                    <MudGrid Spacing="1" Class="display-6 pl-6 pr-6">
+                        <MudItem xs="12" md="3">
+                            <MudPaper Class="mt-4">
+                                <DeviceSelection DeviceData="deviceData"
+                                                 DevicesViewModel="DevicesViewModel"
+                                                 GroupsViewModel="GroupsViewModel"
+                                                 OnDeviceSaved="RefreshComponents" />
+                            </MudPaper>
+                            <MudPaper Class="mt-4">
+                                <TVChannelsFilter ExclusionChannelViewModel="ExclusionChannelViewModel" />
+                            </MudPaper>
+                        </MudItem>
+                        <MudItem xs="12" md="6">
+                            <MudPaper Class="mt-4">
+                                <MainTab DeviceData="deviceData"
+                                         ExclusionChannelViewModel="ExclusionChannelViewModel"
+                                         DevicesViewModel="DevicesViewModel"
+                                         GroupsViewModel="GroupsViewModel"
+                                         OnDeviceSaved="RefreshComponents" />
+                            </MudPaper>
+                        </MudItem>
+                        <MudItem xs="12" md="3">
+                            <MudPaper Class="mt-4">
+                                <SlidersSpacers DeviceData="deviceData"
+                                                DevicesViewModel="DevicesViewModel"
+                                                GroupsViewModel="GroupsViewModel" />
+                            </MudPaper>
+                        </MudItem>
+                    </MudGrid>
+                    <RFGroupsLayout DeviceData="deviceData"
+                                    DevicesViewModel="DevicesViewModel"
+                                    GroupsViewModel="GroupsViewModel" />
+            </MudTabPanel>
+            <MudTabPanel Text="TVChannels" ID='"tvchannels_tab"' />
+            <MudTabPanel Text="Remote" ID='"remote_tab"'>
+                <MudText>
+                    <RemoteTab DeviceData="deviceData"
+                               DevicesViewModel="DevicesViewModel"
+                               GroupsViewModel="GroupsViewModel" />
+                </MudText>
+            </MudTabPanel>
+        </MudTabs>
 }
 
 @code 
@@ -142,14 +127,10 @@ else
 
         var context = new DatabaseContext();
         DevicesViewModel = new DevicesViewModel(context);
-        Debug.Print(json);
         deviceData = JsonConvert.DeserializeObject<DeviceData>(json);
         await DevicesViewModel.LoadDevicesAsync();
         await base.OnInitializedAsync();
         isLoadingJSON = false;
         StateHasChanged();
     }
-
-
-
 }
