--- a/RF_Go/Components/DeviceSelection.razor
+++ b/RF_Go/Components/DeviceSelection.razor
@@ -6,15 +6,14 @@
 @using RF_Go.Models
 @using RF_Go.ViewModels
 @using System.Diagnostics
+@inject ISnackbar Snackbar
 
 @inject IJSRuntime JSRuntime
 @inject NavigationManager NavigationManager
 
-<MudText Typo="Typo.h5" Class="pl-6 pt-2">Devices Selection</MudText>
+@* <MudText Typo="Typo.h5" Class="pl-6 pt-2">Devices Selection</MudText> */ *@
 
 <div id="SelectDeviceMenu">
-
-
         <MudGrid Spacing="2" Justify="Justify.Center" Class="pl-6 pr-6">
                 <MudItem xs="12">
                     <MudSelect T="string" HelperText="Choose device brand" Placeholder="Please Select"
@@ -77,6 +76,7 @@
     [Parameter] public DeviceData DeviceData { get; set; }
     [Parameter] public EventCallback OnDeviceSaved { get; set; }
 
+
     private RFDevice Device => DevicesViewModel.OperatingDevice;
     private string searchString1 = "";
     private MudTable<RFDevice> mudTable;
@@ -116,9 +116,10 @@
             }
         }
 
-        // Recharger les dispositifs après avoir sauvegardé
+        // Recharger les devices après avoir sauvegardé
         await DevicesViewModel.LoadDevicesAsync();
         await OnDeviceSaved.InvokeAsync();
+        Snackbar.Add("Device(s) added", Severity.Success);
     }
 
     private void SaveDataDevicesInfo(RFDevice device)
