Licensing server - State 0

--- a/RF_Go/Pages/Error404.razor
+++ b/RF_Go/Pages/Error404.razor
@@ -7,3 +7,10 @@
 @using RF_Go.Utils
 
 <h3>Error</h3>
+<h2>Le serveur d'auth n'est sans doute pas en fonction</h2>
+
+@code {
+    protected override async Task OnInitializedAsync()
+    {
+    }
+}
