--- a/RF_Go/Pages/License.razor
+++ b/RF_Go/Pages/License.razor
@@ -1,20 +1,57 @@
 ﻿@page "/license"
+@using RF_Go.Components.Licensing
 @inject NavigationManager NavigationManager
 
-<h3>Gérer votre Licence</h3>
-<p>Vous devez activer ou acheter une licence pour utiliser l'application.</p>
+<MudContainer MaxWidth="MaxWidth.Medium" Class="pa-4">
+    <MudPaper Elevation="2" Class="pa-4">
+        <MudText Typo="Typo.h4" Align="Align.Center">Licenses</MudText>
+        <MudText Typo="Typo.subtitle1" Align="Align.Center" Class="mb-4">
+            Redeem a licence to get started.
+        </MudText>
 
-<button @onclick="NavigateToPurchase">Acheter une Licence</button>
-<button @onclick="NavigateToActivate">Activer une Licence</button>
+        <MudStack Row="true" AlignItems="AlignItems.Center" JustifyContent="Center" Spacing="2">
+            <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="ShowPurchaseForm">
+                Buy a license
+            </MudButton>
+            <MudButton Variant="Variant.Filled" Color="Color.Secondary" OnClick="ShowActivationForm">
+                Activate a license
+            </MudButton>
+            <MudButton Variant="Variant.Filled" Color="Color.Secondary" OnClick="DeleteUser">
+                Delete user Data (to restart registration)
+            </MudButton>
+        </MudStack>
+
+        <MudDivider Class="my-4" />
+
+        @if (ShowPurchase)
+        {
+            <PurchaseForm />
+        }
+        else if (ShowActivation)
+        {
+            <ActivationForm />
+        }
+    </MudPaper>
+</MudContainer>
 
 @code {
-    private void NavigateToPurchase()
+    private bool ShowPurchase = false;
+    private bool ShowActivation = false;
+
+    private void ShowPurchaseForm()
     {
-        NavigationManager.NavigateTo("/purchase");
+        ShowPurchase = true;
+        ShowActivation = false;
     }
 
-    private void NavigateToActivate()
+    private void ShowActivationForm()
     {
-        NavigationManager.NavigateTo("/activate");
+        ShowPurchase = false;
+        ShowActivation = true;
+    }
+    private async Task DeleteUser()
+    {
+        SecureStorage.RemoveAll();
+
     }
 }
