--- a/RF_Go/Pages/License.razor
+++ b/RF_Go/Pages/License.razor
@@ -6,7 +6,7 @@
     <MudPaper Elevation="2" Class="pa-4">
         <MudText Typo="Typo.h4" Align="Align.Center">Licenses</MudText>
         <MudText Typo="Typo.subtitle1" Align="Align.Center" Class="mb-4">
-            Redeem a licence to get started.
+            Your device isn't registered yet. Redeem a licence to get started. You received a free license by email.
         </MudText>
 
         <MudStack Row="true" AlignItems="AlignItems.Center" JustifyContent="Center" Spacing="2">
