--- a/RF_Go/Components/Licensing/AccountInfo.razor
+++ b/RF_Go/Components/Licensing/AccountInfo.razor
@@ -1,8 +1,9 @@
 ﻿@using System.Net.Http.Json
 @using Utils
 @using Models.Licensing
+@using System.Diagnostics;
+
 @inject NavigationManager NavigationManager
-@inject HttpClient HttpClient
 
 <MudContainer MaxWidth="MaxWidth.Medium" Style="margin: auto; padding: 20px;">
     <MudPaper Elevation="2" Class="pa-4">
@@ -54,24 +55,25 @@
 </MudContainer>
 
 <MudDialog @bind-IsVisible="IsDeleteDialogOpen" MaxWidth="MaxWidth.Small" Style="padding: 20px;">
-    <MudDialogTitle>Confirmer la suppression</MudDialogTitle>
-    <MudDialogContent>
+    <DialogContent>Confirmer la suppression</DialogContent>
+    <DialogContent>
         <MudText Typo="Typo.body1">Êtes-vous sûr de vouloir supprimer votre compte ? Cette action est irréversible.</MudText>
-    </MudDialogContent>
-    <MudDialogActions>
+    </DialogContent>
+    <DialogActions>
         <MudButton Variant="Variant.Outlined" Color="Color.Secondary" OnClick="() => IsDeleteDialogOpen = false">
             Annuler
         </MudButton>
         <MudButton Variant="Variant.Filled" Color="Color.Error" OnClick="DeleteUser">
             Supprimer
         </MudButton>
-    </MudDialogActions>
+    </DialogActions>
 </MudDialog>
 
 @code {
     private User User = null;
     private bool IsDeleteDialogOpen = false;
     private string Message = "";
+    private HttpClient client = new HttpClient();
 
     protected override async Task OnInitializedAsync()
     {
@@ -90,12 +92,14 @@
             string userKey = await SecureStorage.GetAsync("userKey");
             if (!string.IsNullOrEmpty(userKey))
             {
-                var response = await HttpClient.DeleteAsync($"http://localhost:3000/users/{userKey}");
+                // SecureStorage.RemoveAll(); // A supprimer en prod, on supprime que si le user est delete de la DB
+                client.DefaultRequestHeaders.Add("X-API-KEY", AppConfig.ApiKey);
+                var response = await client.DeleteAsync($"http://localhost:3000/users/{userKey}");
                 if (response.IsSuccessStatusCode)
                 {
-                    // Redirige l'utilisateur après suppression
-                    await SecureStorage.SetAsync("userKey", "");
+                    SecureStorage.RemoveAll();
                     NavigationManager.NavigateTo("/register");
+
                 }
                 else
                 {
