--- a/RF_Go/Pages/Index.razor
+++ b/RF_Go/Pages/Index.razor
@@ -31,7 +31,7 @@ else
                  Centered="true"
                  Rounded="false"
                  AlwaysShowScrollButtons="true">
-            <MudTabPanel Text="Devices" ID='"devices_tab"' Class="flex-grow-1 d-flex flex-column">
+            <MudTabPanel Text="Devices" ID='"devices_tab"' Class="flex-grow-1">
                     <MudGrid Spacing="1" Class="display-6 pl-6 pr-6">
                         <MudItem xs="12" md="3">
                             <MudPaper Class="mt-4">
@@ -59,8 +59,6 @@ else
                                     GroupsViewModel="GroupsViewModel" />
             </MudTabPanel>
 
-            <MudTabPanel Text="TVChannels" ID='"tvchannels_tab"' />
-
             <MudTabPanel Text="Remote" ID='"remote_tab"'>
                 <MudText>
                     <RemoteTab DeviceData="deviceData"
@@ -74,7 +72,6 @@ else
                    <AccountInfo />
                 </MudText>
             </MudTabPanel>
-
         </MudTabs>
 }
 
