--- a/RF_Go/Components/MainTab.razor
+++ b/RF_Go/Components/MainTab.razor
@@ -12,7 +12,7 @@
 
         @if (DevicesViewModel.Devices.Count == 0)
         {
-            <MudContainer MaxWidth="MaxWidth.Medium" Style="height: 100vh; display: flex; justify-content: center; align-items: center;">
+            <MudContainer MaxWidth="MaxWidth.Medium" Style="display: flex; justify-content: center; align-items: center;">
                 <MudPaper Class="pa-6" Elevation="3" Style="text-align: center; max-width: 400px;">
                     <MudAlert Severity="Severity.Info" Variant="Variant.Filled" Class="mb-4">
                         No devices found. Start by adding a device.
