--- a/RF_Go/wwwroot/css/app.css
+++ b/RF_Go/wwwroot/css/app.css
@@ -1,11 +1,26 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
-html, body, #app {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    height: 100vh;
+html, body {
     margin: 0;
     padding: 0;
+    height: 100%;
+    overflow: hidden; /* Prevent scrolling globally */
 }
+
+#app {
+    height: 100%; /* Full height for the Blazor app */
+    display: flex;
+    flex-direction: column;
+}
+
+.full-height {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+
 
 .mud-input-control .mud-select-input {
     margin-top: 0 !important;
