You can now bypass the login for debugging purpose

--- a/RF_Go/Pages/Login.razor
+++ b/RF_Go/Pages/Login.razor
@@ -40,6 +40,11 @@
         {
             <MudAlert Severity="Severity.Error" Class="mt-4">@Message</MudAlert>
         }
+        <MudText Typo="Typo.body2" Align="Align.Center" Class="mt-2">
+            For Debugging purpose, you can directly <MudLink Href="/index">go to the app</MudLink>
+        </MudText>
+
+
     </MudPaper>
 </MudContainer>
 
