--- a/RF_Go/Components/Licensing/AccountInfo.razor
+++ b/RF_Go/Components/Licensing/AccountInfo.razor
@@ -51,6 +51,7 @@
         <MudButton Variant="Variant.Outlined" Color="Color.Error" OnClick="ConfirmUserDeletion">
             Supprimer mon compte
         </MudButton>
+        <MudText>@Message</MudText>
     </MudPaper>
 </MudContainer>
 
