--- a/RF_Go/Pages/Register.razor
+++ b/RF_Go/Pages/Register.razor
@@ -44,6 +44,9 @@
             <MudText Typo="Typo.body1" Align="Align.Center" Class="mt-4">
                 Already have an account? <MudLink Href="/login" Color="Color.Primary">Log in here</MudLink>
             </MudText>
+            <MudText Typo="Typo.body2" Align="Align.Center" Class="mt-2">
+                For debugging purpose, you can directly <MudLink Href="/index">go to the app</MudLink>
+            </MudText>
         </MudForm>
     </MudPaper>
 </MudContainer>
